--- a/maverick.cabal
+++ b/maverick.cabal
@@ -39,11 +39,13 @@ executable maverick
                      , linear
                      , repa
                      , transformers
+                     , GLUtil
                      , containers
                      , extra
                      , GLFW-b
                      , OpenGL
                      , Michelangelo
+                     , Cartesian
                      , maverick
   default-language:    Haskell2010
 
