--- a/maverick.cabal
+++ b/maverick.cabal
@@ -16,15 +16,23 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Maverick.Console
+                     , Maverick.Console.Render
   build-depends:       base >= 4.7 && < 5
                      , lens
                      , text
                      , OpenGL
+                     , GPipe
+                     , GPipe-GLFW
+                     , containers
+                     , either
+                     , FontyFruity
+                     , JuicyPixels
                      , repa
                      , linear
                      , vector
                      , colour
                      , Michelangelo
+                     , Leibniz
                      , Cartesian
   default-language:    Haskell2010
 
@@ -46,6 +54,7 @@ executable maverick
                      , OpenGL
                      , Michelangelo
                      , Cartesian
+                     , Leibniz
                      , maverick
   default-language:    Haskell2010
 
